add initial test function and initial Model

--- a/InvestipsMasterQuotesFunctions/InvestipsMasterQuotesFunctions.csproj
+++ b/InvestipsMasterQuotesFunctions/InvestipsMasterQuotesFunctions.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v1</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
   </ItemGroup>
   <ItemGroup>
