--- a/InvestipsMasterQuotesFunctions/InvestipsMasterQuotesFunctions.csproj
+++ b/InvestipsMasterQuotesFunctions/InvestipsMasterQuotesFunctions.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="TA-Lib" Version="0.5.0.3" />
     <PackageReference Include="YahooFinanceApi" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
