Refactor Move EF Context to new project, create ApplyStochasticCrossingUp25 and ApplyMacdCrossingHorizontalUp

--- a/InvestipsMasterQuotesFunctions/InvestipsMasterQuotesFunctions.csproj
+++ b/InvestipsMasterQuotesFunctions/InvestipsMasterQuotesFunctions.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FinanceQuoteService\FinanceQuoteService.csproj" />
+    <ProjectReference Include="..\Investips.Data\Investips.Data.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -24,5 +25,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
