--- a/Investips.Data/Investips.Data.csproj
+++ b/Investips.Data/Investips.Data.csproj
@@ -52,6 +52,10 @@
     <Compile Include="Migrations\201902010723506_InitialCreate.Designer.cs">
       <DependentUpon>201902010723506_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902020641181_AddIsBullThreeArrow.cs" />
+    <Compile Include="Migrations\201902020641181_AddIsBullThreeArrow.Designer.cs">
+      <DependentUpon>201902020641181_AddIsBullThreeArrow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\InvestipsQuotesContext.cs" />
     <Compile Include="Models\Quote.cs" />
@@ -64,6 +68,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902010723506_InitialCreate.resx">
       <DependentUpon>201902010723506_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902020641181_AddIsBullThreeArrow.resx">
+      <DependentUpon>201902020641181_AddIsBullThreeArrow.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
