--- a/Investips.Data/Investips.Data.csproj
+++ b/Investips.Data/Investips.Data.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\201902020641181_AddIsBullThreeArrow.Designer.cs">
       <DependentUpon>201902020641181_AddIsBullThreeArrow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902090351275_AddExtraSignalsProperties.cs" />
+    <Compile Include="Migrations\201902090351275_AddExtraSignalsProperties.Designer.cs">
+      <DependentUpon>201902090351275_AddExtraSignalsProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\InvestipsQuotesContext.cs" />
     <Compile Include="Models\Quote.cs" />
@@ -71,6 +75,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902020641181_AddIsBullThreeArrow.resx">
       <DependentUpon>201902020641181_AddIsBullThreeArrow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902090351275_AddExtraSignalsProperties.resx">
+      <DependentUpon>201902090351275_AddExtraSignalsProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
