--- a/Investips.Data/Investips.Data.csproj
+++ b/Investips.Data/Investips.Data.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\201902090351275_AddExtraSignalsProperties.Designer.cs">
       <DependentUpon>201902090351275_AddExtraSignalsProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902270602541_AddQuoteProperties.cs" />
+    <Compile Include="Migrations\201902270602541_AddQuoteProperties.Designer.cs">
+      <DependentUpon>201902270602541_AddQuoteProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\InvestipsQuotesContext.cs" />
     <Compile Include="Models\Quote.cs" />
@@ -78,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902090351275_AddExtraSignalsProperties.resx">
       <DependentUpon>201902090351275_AddExtraSignalsProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902270602541_AddQuoteProperties.resx">
+      <DependentUpon>201902270602541_AddQuoteProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
