--- a/Investips.Data/Investips.Data.csproj
+++ b/Investips.Data/Investips.Data.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201903030845063_AddIsSuperGap.Designer.cs">
       <DependentUpon>201903030845063_AddIsSuperGap.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906222358159_AddIsSuperGapBearProp.cs" />
+    <Compile Include="Migrations\201906222358159_AddIsSuperGapBearProp.Designer.cs">
+      <DependentUpon>201906222358159_AddIsSuperGapBearProp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\InvestipsQuotesContext.cs" />
     <Compile Include="Models\Quote.cs" />
@@ -99,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903030845063_AddIsSuperGap.resx">
       <DependentUpon>201903030845063_AddIsSuperGap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906222358159_AddIsSuperGapBearProp.resx">
+      <DependentUpon>201906222358159_AddIsSuperGapBearProp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
