Add / Fix Bear Gap Down - Add Doji properti

--- a/Investips.Data/Investips.Data.csproj
+++ b/Investips.Data/Investips.Data.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\201906231022024_AddBearRelatedPropertiesSignals.Designer.cs">
       <DependentUpon>201906231022024_AddBearRelatedPropertiesSignals.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906231915114_AddDojiProperty.cs" />
+    <Compile Include="Migrations\201906231915114_AddDojiProperty.Designer.cs">
+      <DependentUpon>201906231915114_AddDojiProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\InvestipsQuotesContext.cs" />
     <Compile Include="Models\Quote.cs" />
@@ -113,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906231022024_AddBearRelatedPropertiesSignals.resx">
       <DependentUpon>201906231022024_AddBearRelatedPropertiesSignals.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906231915114_AddDojiProperty.resx">
+      <DependentUpon>201906231915114_AddDojiProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
